# Aegis-OS-Agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SAFETY.md  aegis.spec  msg.txt  pyproject.toml  requirements-optional.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  release.yml
Superpristm-to-Blender-main/: .gitignore  README.md  README_Blender.md  requirements.txt
Superpristm-to-Blender-main/SuperPrismReactor/: .gitkeep  SuperPRISM_Reactor.unity
Superpristm-to-Blender-main/assets/: scene_hierarchy.json  scene_lights.json  scene_materials.json
Superpristm-to-Blender-main/blender/: auto_materials.py  construct_scene.py  coordinate_converter.py  import_full_scene.py  import_lights.py  import_map.py  viewport_setup.py
Superpristm-to-Blender-main/docs/: import_workflow.md
Superpristm-to-Blender-main/tests/: test_material_pipeline.py  test_material_pipeline_static.py  test_scene_construction.py
Superpristm-to-Blender-main/tools/: collect_assets.py  extract_lights.py  map_scene_materials.py  parse_scene_hierarchy.py
aegis/: __init__.py  main.py  main.py.bak
aegis/config/: __init__.py  defaults.json  paths.py  schema.py
aegis/core/: __init__.py  actions.py  actions.py.bak  bus.py  classifiers.py  hash.py  hash.py.bak  heuristics.py  intents.py  intents.py.bak  notifier.py  quarantine.py  renamer.py  scheduler.py  summarizer.py  utils.py  utils.py.bak  vault.py
aegis/reports/: __init__.py  exporter.py  quarantine.py
aegis/ui/: __init__.py  first_run.py  hotkey.py  hotkey.py.bak  palette.py  settings.py  system.py  tray.py  wizard.py
docs/: hardening.md  packaging.md
examples/: demo_walkthrough.md
scripts/: build_artifacts.py
tests/: conftest.py  test_actions.py  test_actions.py.bak  test_conflict_markers.py  test_first_run.py  test_intents.py  test_quarantine.py  test_quarantine_report.py  test_renamer.py  test_vault.py  test_watchers.py  test_watchers.py.bak  test_watchers_e2e.py
(+24 files in other folders)
