[metadata]
name = aegis-os-agent
version = 0.1.0

[options]
packages = find:
include_package_data = True
python_requires = >=3.10

[options.entry_points]
console_scripts =
    aegis = aegis.main:cli

[tool:pytest]
addopts = -ra --strict-config --strict-markers
log_cli = true
log_cli_level = INFO

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "S", "DTZ"]
ignore = ["S101", "S311"]

